--- a/main.html
+++ b/main.html
@@ -4,13 +4,27 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Quiz Question</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+   <!-- Question & Options -->
+    <h2>What is the captial of India?</h2>
 
+    <label>
+        <input type="radio" name="capital"> New Delhi
+    </label><br>
+
+    <label>
+        <input type="radio" name="capital"> Mumbai
+    </label>
+
+    <!-- Quotation -->
+    <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
+        "New Delhi is the capital of India and an administrative district of NCT Delhi."
+        <br>— Wikipedia
+    </blockquote>
 </body>
 
 </html>
