--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
     <!-- Quotation -->
     <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
         "New Delhi is the capital of India and an administrative district of NCT Delhi."
-        <br>— Wikipedia
+        <br>—<a href="https://en.wikipedia.org/wiki/New_Delhi">Wikipedia.</a>
     </blockquote>
 </body>
 
